# NeverLost

./: .gitignore  BUILD.md  CANONICAL_STATUS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ADMIN_PLUGIN_MINIMAL_v1.md  AUDIT.md  DEBUG.md  PIPELINE_CONTRACTS_NeverLost_v1.md  RELEASE_NOTES_NEVERLOST_CLI_TIER0_FREEZE_v1.md  RUNBOOK.md  SPEC_NeverLost_v1.md  THREAT_MODEL_NeverLost_v1.md  USAGE_NEVERLOST_CLI_v1.md  WBS_NEVERLOST_TIER1_v1.md
scripts/: _DIAG_sshkeygen_resolve_v1.ps1  _DIAG_sshkeygen_y_support_v1.ps1  _DIAG_sshkeygen_y_support_v2.ps1  _DIAG_sshkeygen_y_verify_v1.ps1  _DIAG_watchtower_sigproof_v1g_verify.ps1  _PATCH_neverlost_fix_lib_and_allowed_signers_CANON_v1.ps1  _PATCH_neverlost_fix_lib_and_allowed_signers_v1.ps1  _PATCH_neverlost_fix_lib_and_allowed_signers_v2.ps1  _PATCH_neverlost_fix_lib_and_allowed_signers_v6.ps1  _PATCH_neverlost_fix_lib_and_allowed_signers_v8.ps1  _PATCH_neverlost_fix_make_allowed_signers_v10.ps1  _PATCH_neverlost_fix_make_allowed_signers_v13.ps1  _PATCH_neverlost_fix_make_allowed_signers_v9.ps1  _PATCH_overwrite_runner_v1.ps1  _PATCH_restore_settings_admin_toggle_v2.ps1  _RUNME_finish_neverlost_v1.ps1  _RUNME_patch_make_allowed_signers_v15.ps1  _RUNME_restore_make_allowed_signers_v14.ps1  _RUN_neverlost_authority_full_green_v1.ps1  _RUN_neverlost_identity_contract_v10.ps1  _RUN_neverlost_identity_contract_v11e.ps1  _RUN_neverlost_tier0_all_green_v1.ps1  (+42 more)
src/: App.tsx  index.css  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
(+61 files in other folders)
